feat: single source of truth for card size

--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -1,6 +1,6 @@
 .card {
-  width: 8.6cm;
-  height: 5.6cm;
+  width: var(--width);
+  height: var(--height);
   border: 1px solid rgb(200, 200, 200);
   margin: -0.5px;
   position: relative;
