--- a/src/components/Sheet.module.css
+++ b/src/components/Sheet.module.css
@@ -1,5 +1,38 @@
 .sheet {
+  width: 210mm;
+  height: 297mm;
+  min-height: 297mm;
   padding: 7mm;
+  margin: 10mm auto;
+  background: white;
+  box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
+  box-sizing: border-box;
+}
+
+@page {
+  size: A4;
+  margin: 0;
+}
+
+@media print {
+  html,
+  body {
+    margin: 0;
+    width: 210mm;
+    height: 297mm;
+  }
+
+  .sheet {
+    margin: 0;
+    border: initial;
+    border-radius: initial;
+    width: initial;
+    min-height: initial;
+    box-shadow: initial;
+    background: initial;
+    break-inside: avoid;
+    break-after: always;
+  }
 }
 
 .grid {
