--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -19,3 +19,9 @@
   width: calc(var(--width) - 1.3cm);
   height: calc(var(--height) - 1.6cm);
 }
+
+@media print {
+  .rotated {
+    transform: rotateZ(180deg);
+  }
+}
